--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: "com.hiya.jacoco-android"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
     defaultConfig {
         applicationId "org.jak_linux.dns66"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 32
         versionCode 29
         versionName "0.6.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,14 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
-        warning "MissingTranslation"
-    }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
-    buildToolsVersion = '29.0.3'
+    lint {
+        warning 'MissingTranslation'
+    }
 }
 
 dependencies {
@@ -46,11 +45,11 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.1'
     testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation ('org.powermock:powermock-api-mockito:1.6.6') {
+    testImplementation('org.powermock:powermock-api-mockito:1.6.6') {
         exclude module: 'hamcrest-core'
         exclude module: 'objenesis'
     }
-    testImplementation ('org.powermock:powermock-module-junit4:1.6.6') {
+    testImplementation('org.powermock:powermock-module-junit4:1.6.6') {
         exclude module: 'hamcrest-core'
         exclude module: 'objenesis'
     }
