--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,32 @@
+pluginManagement {
+    repositories {
+        maven {
+            name = "阿里云 Central 镜像"
+            setUrl("https://maven.aliyun.com/repository/central")
+        }
+        maven {
+            name = "阿里云 Google 镜像"
+            setUrl("https://maven.aliyun.com/repository/google")
+        }
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        maven {
+            name = "阿里云 Central 镜像"
+            setUrl("https://maven.aliyun.com/repository/central")
+        }
+        maven {
+            name = "阿里云 Google 镜像"
+            setUrl("https://maven.aliyun.com/repository/google")
+        }
+        google()
+        mavenCentral()
+    }
+}
+
 include ':app'
